@@ -6,6 +6,8 @@ Release ...
 * [nt]roff: The ".dwh" and ".dch" requests have been introduced to allow
   multiple diversion traps in the same diversion.
 * [nt]roff: The "\n[.dilev]" register contains the current diversion level.
+* [nt]roff: The "\B" escape sequence (check for valid numerical expression)
+  is now available in regular mode too, not only in groff compatibility mode.
 * tbl: Can now optionally use graphic drawing commands (troff "\D") instead
   of repeated-character line drawing (troff "\l" and "\L"). The "graphics"
   option enables it per table, and the "-g" command line option enables it
